added education/ resume and email work

--- a/about.html
+++ b/about.html
@@ -186,10 +186,7 @@
                       </p>
                       <p>
                         <strong>Address:</strong>
-                        <span
-                          >88 West 21th Street, Suite 721 New York NY
-                          10016</span
-                        >
+                        <span>26 Skyhawk Cir, Weymouth, MA 02190</span>
                       </p>
                       <p><strong>Phone:</strong> <span>(714)-276-7298</span></p>
                     </div>
@@ -199,10 +196,7 @@
                       </p>
                       <p>
                         <strong>Address:</strong>
-                        <span
-                          >88 West 21th Street, Suite 721 New York NY
-                          10016</span
-                        >
+                        <span>26 Skyhawk Cir, Weymouth, MA 02190</span>
                       </p>
                       <p><strong>Phone:</strong> <span>(714)-276-7298</span></p>
                     </div>
@@ -264,52 +258,53 @@
                   <div class="exp-wrap py-4">
                     <div class="desc">
                       <h4>
-                        Master Degree in Computer Science<span>
-                          - Harvard University</span
+                        Master of Human Resource Management , Digital HR<span>
+                          - Northeastern University</span
                         >
                       </h4>
                       <p class="location">Boston - Massachusetts</p>
                     </div>
                     <div class="year">
-                      <p>2013 - 2014</p>
+                      <p>Feb 2022 - Dec 2023</p>
                     </div>
                   </div>
 
                   <div class="exp-wrap py-4">
                     <div class="desc">
                       <h4>
-                        Bacheclor of Science in Computer Science<span>
-                          - Harvard University</span
-                        >
+                        Bachelor of Science in Information Systems & Business
+                        Analytics<span> - UMass Boston</span>
                       </h4>
                       <p class="location">Boston - Massachusetts</p>
                     </div>
                     <div class="year">
-                      <p>2009 - 2012</p>
+                      <p>2017 - 2021</p>
                     </div>
                   </div>
 
                   <div class="exp-wrap py-4">
                     <div class="desc">
                       <h4>
-                        Diploma in Information Technology<span>
-                          - Oxford University</span
+                        Associate of Arts & Sciences - AAS,<span>
+                          - Bunker Hill Community College</span
                         >
                       </h4>
                       <p class="location">Boston - Massachusetts</p>
                     </div>
                     <div class="year">
-                      <p>2008 - 2010</p>
+                      <p>2016 - 2017</p>
                     </div>
                   </div>
 
                   <div class="exp-wrap py-4">
                     <div class="desc">
-                      <h4>Front-End Developer <span> - Big Comany</span></h4>
+                      <h4>
+                        Google Data Analyst <span> Zee Education Services</span>
+                      </h4>
                       <p class="location">Boston - Massachusetts</p>
                     </div>
                     <div class="year">
-                      <p>2012 - 2014</p>
+                      <p>2022 - 2023</p>
                     </div>
                   </div>
                 </div>
