Final changes for today/put in images

--- a/about.html
+++ b/about.html
@@ -43,7 +43,7 @@
         <div class="js-fullheight colorlib-table">
           <div
             class="img"
-            style="background-image: url(images/author-2.jpg)"
+            style="background-image: url(images/subway.JPG)"
           ></div>
           <div class="colorlib-table-cell js-fullheight">
             <div class="row no-gutters">
@@ -98,7 +98,7 @@
                   <a class="colorlib-logo" href="index.html"
                     ><span
                       class="logo-img"
-                      style="background-image: url(images/person_1.jpg)"
+                      style="background-image: url(images/closeup.jpg)"
                     ></span
                     >Hamza Alshaibani</a
                   >
@@ -116,7 +116,7 @@
             <div class="row d-flex my-5" data-scrollax-parent="true">
               <div
                 class="col-md-4 author-img"
-                style="background-image: url(images/author-1.jpg)"
+                style="background-image: url(images/IMG_2454.jpg)"
                 data-scrollax=" properties: { translateY: '-70%'}"
               ></div>
               <div class="col-md-2"></div>
@@ -155,11 +155,21 @@
                       </li>
 
                       <li>
-                        <a href="#"><span class="icon-instagram"></span></a>
+                        <a
+                          href="https://www.instagram.com/_hamzaali/"
+                          target="_blank"
+                          ><span class="icon-instagram"></span
+                        ></a>
                       </li>
                     </ul>
                     <h5>Contact me here!</h5>
-                    <p>Email: <a href="#">hamzalshaibani@gmail.com</a></p>
+                    <p>
+                      Email:
+                      <a
+                        href="mailto:Hamzalshaibani@gmail.com?subject=Portfolio Inquiry"
+                        >Hamzalshaibani@gmail.com</a
+                      >
+                    </p>
                     <p>Phone: <a href="#">(714)-276-7298</a></p>
                   </div>
                 </div>
@@ -170,14 +180,14 @@
                 <div class="profile ftco-animate">
                   <h2 class="mb-4">Profile</h2>
                   <h4 class="mb-4">
-                    I'm a UI/UX Designer &amp; Frontend Developer from London,
-                    UK. I aim to make a difference through my creative solution.
+                    I am a versatile analyst with over two years of experience
+                    in data collection, transformation, and organization for
+                    analysis.
                   </h4>
                   <p>
-                    Far far away, behind the word mountains, far from the
-                    countries Vokalia and Consonantia, there live the blind
-                    texts. Separated they live in Bookmarksgrove right at the
-                    coast of the Semantics, a large language ocean.
+                    I am a proud graduate of Northeastern University, holding a
+                    degree in Digital HR, and I have diligently achieved the
+                    Google Data Analytics Certificate.
                   </p>
                   <div class="row my-5">
                     <div class="col-md-6">
@@ -451,14 +461,21 @@
                     </li>
 
                     <li class="ftco-animate">
-                      <a href="#"><span class="icon-instagram"></span></a>
+                      <a
+                        href="https://www.instagram.com/_hamzaali/"
+                        target="_blank"
+                        ><span class="icon-instagram"></span
+                      ></a>
                     </li>
                   </ul>
                 </div>
                 <div class="ftco-footer-widget">
                   <h2 class="mb-3">Contact Me</h2>
                   <p class="h3 email">
-                    <a href="#">hamzalshaibani@gmail.com</a>
+                    <a
+                      href="mailto:Hamzalshaibani@gmail.com?subject=Portfolio Inquiry"
+                      >Email Me</a
+                    >
                   </p>
                 </div>
               </div>
