--- a/blog-single.html
+++ b/blog-single.html
@@ -43,7 +43,7 @@
         <div class="js-fullheight colorlib-table">
           <div
             class="img"
-            style="background-image: url(images/author-2.jpg)"
+            style="background-image: url(images/subway.JPG)"
           ></div>
           <div class="colorlib-table-cell js-fullheight">
             <div class="row no-gutters">
@@ -98,7 +98,7 @@
                   <a class="colorlib-logo" href="index.html"
                     ><span
                       class="logo-img"
-                      style="background-image: url(images/person_1.jpg)"
+                      style="background-image: url(images/closeup.jpg)"
                     ></span
                     >Hamza Alshaibani</a
                   >
@@ -203,7 +203,7 @@
                 <div class="about-author d-flex pt-5">
                   <div class="bio align-self-md-center mr-4">
                     <img
-                      src="images/person_1.jpg"
+                      src="images/closeup.jpg"
                       alt="Image placeholder"
                       class="img-fluid mb-4"
                     />
@@ -225,10 +225,7 @@
                   <ul class="comment-list">
                     <li class="comment">
                       <div class="vcard bio">
-                        <img
-                          src="images/person_1.jpg"
-                          alt="Image placeholder"
-                        />
+                        <img src="images/closeup.jpg" alt="Image placeholder" />
                       </div>
                       <div class="comment-body">
                         <h3>Jean Doe</h3>
@@ -246,10 +243,7 @@
 
                     <li class="comment">
                       <div class="vcard bio">
-                        <img
-                          src="images/person_1.jpg"
-                          alt="Image placeholder"
-                        />
+                        <img src="images/closeup.jpg" alt="Image placeholder" />
                       </div>
                       <div class="comment-body">
                         <h3>Jean Doe</h3>
@@ -268,7 +262,7 @@
                         <li class="comment">
                           <div class="vcard bio">
                             <img
-                              src="images/person_1.jpg"
+                              src="images/closeup.jpg"
                               alt="Image placeholder"
                             />
                           </div>
@@ -289,7 +283,7 @@
                             <li class="comment">
                               <div class="vcard bio">
                                 <img
-                                  src="images/person_1.jpg"
+                                  src="images/closeup.jpg"
                                   alt="Image placeholder"
                                 />
                               </div>
@@ -311,7 +305,7 @@
                                 <li class="comment">
                                   <div class="vcard bio">
                                     <img
-                                      src="images/person_1.jpg"
+                                      src="images/closeup.jpg"
                                       alt="Image placeholder"
                                     />
                                   </div>
@@ -340,10 +334,7 @@
 
                     <li class="comment">
                       <div class="vcard bio">
-                        <img
-                          src="images/person_1.jpg"
-                          alt="Image placeholder"
-                        />
+                        <img src="images/closeup.jpg" alt="Image placeholder" />
                       </div>
                       <div class="comment-body">
                         <h3>Jean Doe</h3>
@@ -424,14 +415,21 @@
                       </a>
                     </li>
                     <li class="ftco-animate">
-                      <a href="#"><span class="icon-instagram"></span></a>
+                      <a
+                        href="https://www.instagram.com/_hamzaali/"
+                        target="_blank"
+                        ><span class="icon-instagram"></span
+                      ></a>
                     </li>
                   </ul>
                 </div>
                 <div class="ftco-footer-widget">
                   <h2 class="mb-3">Contact Me</h2>
                   <p class="h3 email">
-                    <a href="#">hamzalshaibani@gmail.com</a>
+                    <a
+                      href="mailto:Hamzalshaibani@gmail.com?subject=Portfolio Inquiry"
+                      >Email Me</a
+                    >
                   </p>
                 </div>
               </div>
