--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <div class="js-fullheight colorlib-table">
           <div
             class="img"
-            style="background-image: url(images/author-2.jpg)"
+            style="background-image: url(images/subway.JPG)"
           ></div>
           <div class="colorlib-table-cell js-fullheight">
             <div class="row no-gutters">
@@ -98,7 +98,7 @@
                   <a class="colorlib-logo" href="index.html"
                     ><span
                       class="logo-img"
-                      style="background-image: url(images/person_1.jpg)"
+                      style="background-image: url(images/closeup.jpg)"
                     ></span
                     >Hamza Alshaibani</a
                   >
@@ -165,7 +165,7 @@
             <div class="row d-flex" data-scrollax-parent="true">
               <div
                 class="col-md-4 author-img"
-                style="background-image: url(images/author-1.jpg)"
+                style="background-image: url(images/IMG_2454.jpg)"
                 data-scrollax=" properties: { translateY: '-70%'}"
               ></div>
               <div class="col-md-2"></div>
@@ -206,7 +206,8 @@
                       
                       </li>
                       <li>
-                        <a href="#"><span class="icon-instagram"></span></a>
+                        <a href="https://www.instagram.com/_hamzaali/" target="_blank"><span class="icon-instagram"></span></a>
+
                       </li>
                     </ul>
                     <h5>Contact me here!</h5>
@@ -537,14 +538,16 @@
                     </a>
                     </li>
                     <li class="ftco-animate">
-                      <a href="#"><span class="icon-instagram"></span></a>
+                      <a href="https://www.instagram.com/_hamzaali/" target="_blank"><span class="icon-instagram"></span></a>
+
                     </li>
                   </ul>
                 </div>
                 <div class="ftco-footer-widget">
                   <h2 class="mb-3">Contact Me</h2>
                   <p class="h3 email">
-                    <a href="#">hamzalshaibani@gmail.com</a>
+                    <a href="mailto:Hamzalshaibani@gmail.com?subject=Portfolio Inquiry">Click to Shoot Email</a>
+
                   </p>
                 </div>
               </div>
