--- a/about.html
+++ b/about.html
@@ -122,7 +122,7 @@
               <div class="col-md-2"></div>
               <div class="col-md-6 wrap ftco-animate">
                 <div class="about-desc">
-                  <h1 class="bold-text">About</h1>
+                  <!-- <h1 class="bold-text">About</h1> -->
                   <div class="p-5">
                     <h2 class="mb-5">Hi! I'm Hamza Alshaibani</h2>
                     <p>
