--- a/contact.html
+++ b/contact.html
@@ -120,69 +120,70 @@
               <div class="w-100"></div>
               <div class="col-md-3">
                 <p>
-                  <span>Address:</span> 198 West 21th Street, Suite 721 New York
-                  NY 10016
+                  <span>Address:</span> 26 Skyhawk Cir, Weymouth, MA 02190
                 </p>
               </div>
               <div class="col-md-3">
                 <p>
                   <span>Phone:</span>
-                  <a href="tel://1234567920">+ 1235 2355 98</a>
+                  <a href="tel://1234567920">(714)-276-7298</a>
                 </p>
               </div>
               <div class="col-md-3">
                 <p>
                   <span>Email:</span>
-                  <a href="mailto:info@yoursite.com">Hamzalshaibani@gmail.com</a>
+                  <a href="mailto:Hamzalshaibani@gmail.com">Hamzalshaibani@gmail.com</a>
                 </p>
               </div>
-              <div class="col-md-3">
+              <!-- <div class="col-md-3">
                 <p><span>Website:</span> <a href="#">yoursite.com</a></p>
-              </div>
+              </div> -->
             </div>
-            <div class="row block-9">
-              <div class="col-md-6 pr-md-5">
-                <form action="#">
-                  <div class="form-group">
-                    <input
-                      type="text"
-                      class="form-control"
-                      placeholder="Your Name"
-                    />
-                  </div>
-                  <div class="form-group">
-                    <input
-                      type="text"
-                      class="form-control"
-                      placeholder="Your Email"
-                    />
-                  </div>
-                  <div class="form-group">
-                    <input
-                      type="text"
-                      class="form-control"
-                      placeholder="Subject"
-                    />
-                  </div>
-                  <div class="form-group">
-                    <textarea
-                      name=""
-                      id=""
-                      cols="30"
-                      rows="7"
-                      class="form-control"
-                      placeholder="Message"
-                    ></textarea>
-                  </div>
-                  <div class="form-group">
-                    <input
-                      type="submit"
-                      value="Send Message"
-                      class="btn btn-primary py-3 px-5"
-                    />
-                  </div>
-                </form>
-              </div>
+            <div class="col-md-6 pr-md-5">
+              <form
+                action="https://formspree.io/f/mwkdbrjy"
+                method="POST"
+              >
+                <div class="form-group">
+                  <input
+                    type="text"
+                    class="form-control"
+                    placeholder="Your Name"
+                    name="name"
+                  />
+                </div>
+                <div class="form-group">
+                  <input
+                    type="text"
+                    class="form-control"
+                    placeholder="Your Email"
+                    name="email"
+                  />
+                </div>
+                <div class="form-group">
+                  <input
+                    type="text"
+                    class="form-control"
+                    placeholder="Subject"
+                    name="subject"
+                  />
+                </div>
+                <div class="form-group">
+                  <textarea
+                    name="message"
+                    id=""
+                    cols="30"
+                    rows="7"
+                    class="form-control"
+                    placeholder="Message"
+                  ></textarea>
+                </div>
+                <!-- your other form fields go here -->
+                <button type="submit" class="btn btn-primary py-3 px-5">Send Message</button>
+              </form>
+            </div>
+            
+            
               <div class="col-md-6" id="map"></div>
             </div>
           </div>
