fidgeted with google maps

--- a/contact.html
+++ b/contact.html
@@ -183,8 +183,8 @@
               </form>
             </div>
             
-            
-              <div class="col-md-6" id="map"></div>
+            <!-- This is to show google maps -->
+              <!-- <div class="col-md-6" id="map"></div> -->
             </div>
           </div>
         </section>
